:sparkles: feat: Integrate PrimeNG components and themes; update app configuration and home page to utilize new button component

--- a/bilaterals-client/src/app/pages/home/home.html
+++ b/bilaterals-client/src/app/pages/home/home.html
@@ -1,2 +1,2 @@
 <p>home works!</p>
-<button routerLink="/bilaterals">Go to Bilaterals</button>
+<p-button routerLink="/bilaterals">Go to Bilaterals</p-button>
