:sparkles: feat: Integrate Tailwind CSS and PostCSS into the project; update styles and home page for enhanced design and configuration settings for Prettier

--- a/bilaterals-client/src/app/pages/home/home.html
+++ b/bilaterals-client/src/app/pages/home/home.html
@@ -1,2 +1,2 @@
-<p>home works!</p>
+<p class="text-3xl font-bold underline">home works!</p>
 <p-button routerLink="/bilaterals">Go to Bilaterals</p-button>
