--- a/bilaterals-client/src/app/pages/home/home.html
+++ b/bilaterals-client/src/app/pages/home/home.html
@@ -1,2 +1,29 @@
-<p class="text-3xl font-bold underline">home works!</p>
+<p class="text-3xl font-bold underline">home works! Example with PrimeNG and Tailwind</p>
 <p-button routerLink="/bilaterals">Go to Bilaterals</p-button>
+
+<div class="flex flex-col p-6 gap-6 w-full sm:w-auto">
+  <div class="flex flex-col sm:flex-row sm:items-center gap-6">
+    <div class="flex-auto">
+      <label for="firstname" class="block font-semibold mb-2">Firstname</label>
+      <input type="text" pInputText id="firstname" class="w-full" />
+    </div>
+    <div class="flex-auto">
+      <label for="lastname" class="block font-semibold mb-2">Lastname</label>
+      <input type="text" pInputText id="lastname" class="w-full" />
+    </div>
+  </div>
+  <div class="flex flex-col sm:flex-row sm:items-center gap-6">
+    <div class="flex-1">
+      <label for="lastname" class="block font-semibold mb-2">Lastname</label>
+      <input type="text" pInputText id="lastname" class="w-full" />
+    </div>
+    <div class="flex-1">
+      <label for="lastname" class="block font-semibold mb-2">Lastname</label>
+      <input type="text" pInputText id="lastname" class="w-full" />
+    </div>
+  </div>
+  <div class="flex-auto">
+    <label for="message" class="block font-semibold mb-2">Message</label>
+    <textarea pTextarea id="message" class="w-full" rows="4"></textarea>
+  </div>
+</div>
