--- a/bilaterals-client/src/app/pages/home/home.html
+++ b/bilaterals-client/src/app/pages/home/home.html
@@ -1,5 +1,7 @@
-<p class="text-3xl font-bold underline">home works! Example with PrimeNG and Tailwind</p>
-<p-button routerLink="/bilaterals">Go to Bilaterals</p-button>
+<div class="flex flex-col p-6 gap-6 w-full sm:w-auto">
+  <p class="text-3xl font-bold underline">home works! Example with PrimeNG and Tailwind</p>
+  <p-button routerLink="/bilaterals">Go to Bilaterals</p-button>
+</div>
 
 <div class="flex flex-col p-6 gap-6 w-full sm:w-auto">
   <div class="flex flex-col sm:flex-row sm:items-center gap-6">
