--- a/bilaterals-client/src/app/pages/bilaterals/bilaterals.html
+++ b/bilaterals-client/src/app/pages/bilaterals/bilaterals.html
@@ -1,2 +1,5 @@
-<p>bilaterals works!</p>
-<button routerLink="/">Go to Home</button>
+<div class="flex flex-col p-6 gap-6">
+  <p>bilaterals works!</p>
+  <p-button label="PrimeNG works!" />
+  <div class="bg-gray-300 w-full">Tailwind works!</div>
+</div>
